// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keyValueField > should add error with unvalidated regex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir9341"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir9341"
        >
          <div
            class="uv_tmj42l2 uv_78oem50 uv_78oem511"
            style="--uv_ivy5ld0: 1fr 1fr auto; --uv_ivy5ld1: 1fr 1fr auto; --uv_ivy5ld2: 1fr 1fr auto; --uv_ivy5ld3: 1fr 1fr auto; --uv_ivy5ld4: 1fr 1fr auto; --uv_ivy5ld5: 1fr 1fr auto;"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <label
                class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
                for="_r_q_"
              >
                key
              </label>
              <div
                class="uv_dk0fjs8 uv_dk0fjs5"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  class="uv_dk0fjs9"
                  data-size="large"
                  id="_r_q_"
                  name="test.0.key"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <label
                class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
                for="_r_10_"
              >
                value
              </label>
              <div
                class="uv_dk0fjs8 uv_dk0fjs5"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="uv_dk0fjs9"
                  data-size="large"
                  id="_r_10_"
                  name="test.0.value"
                  type="text"
                  value="a"
                />
              </div>
            </div>
            <button
              class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m6 uv_1x0t66me uv_1x0t66mk uv_1x0t66mw"
              data-testid="remove-button-0"
              type="button"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  DeleteIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="uv_mxir930 uv_mxir932j uv_mxir936j"
        >
          <div
            class="uv_1u0cyic5"
          >
            <button
              class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mk uv_1x0t66mu"
              data-testid="add-button"
              type="button"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  PlusIcon
                </title>
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should disable submit button when required and empty 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir9341"
      >
        <div
          class="uv_mxir930 uv_mxir932j uv_mxir936j"
        >
          <button
            class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mk uv_1x0t66mu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
      ,
      <button
        class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        disabled=""
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should enable submit button when typing on key with regex and nothing required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir9341"
      >
        <div
          class="uv_mxir930 uv_mxir932d uv_mxir9341"
        >
          <div
            class="uv_tmj42l2 uv_78oem50 uv_78oem511"
            style="--uv_ivy5ld0: 1fr 1fr auto; --uv_ivy5ld1: 1fr 1fr auto; --uv_ivy5ld2: 1fr 1fr auto; --uv_ivy5ld3: 1fr 1fr auto; --uv_ivy5ld4: 1fr 1fr auto; --uv_ivy5ld5: 1fr 1fr auto;"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <label
                class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
                for="_r_1k_"
              >
                key
              </label>
              <div
                class="uv_dk0fjs8 uv_dk0fjs5"
                data-disabled="false"
                data-error="true"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-describedby="error-key-0"
                  aria-invalid="true"
                  class="uv_dk0fjs9"
                  data-size="large"
                  id="_r_1k_"
                  name="test.0.key"
                  type="text"
                  value="a@"
                />
                <div
                  class="uv_dk0fjs2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      AlertCircleIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <label
                class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
                for="_r_1q_"
              >
                value
              </label>
              <div
                class="uv_dk0fjs8 uv_dk0fjs5"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="uv_dk0fjs9"
                  data-size="large"
                  id="_r_1q_"
                  name="test.0.value"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <button
              class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m6 uv_1x0t66me uv_1x0t66mk uv_1x0t66mw"
              data-testid="remove-button-0"
              type="button"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  DeleteIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <span
              class="uv_tmj42l0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak89 uv_1yhcak8p uv_1yhcak81a uv_1yhcak82m"
              id="error-key-0"
              role="status"
            >
              This field should match the regex ^[a-zA-Z]*$
            </span>
          </div>
        </div>
        <div
          class="uv_mxir930 uv_mxir932j uv_mxir936j"
        >
          <button
            class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mk uv_1x0t66mu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
      ,
      <button
        class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        disabled=""
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props & max size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir9341"
      >
        <div
          class="uv_mxir930 uv_mxir932j uv_mxir936j"
        >
          <div
            class="uv_1u0cyic5"
          >
            <button
              class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mk uv_1x0t66mu"
              data-testid="add-button"
              type="button"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  PlusIcon
                </title>
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir9341"
      >
        <div
          class="uv_mxir930 uv_mxir932j uv_mxir936j"
        >
          <div
            class="uv_1u0cyic5"
          >
            <button
              class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mk uv_1x0t66mu"
              data-testid="add-button"
              type="button"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  PlusIcon
                </title>
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props in readonly mode 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir9341"
      >
        <div
          class="uv_mxir930 uv_mxir932j uv_mxir936j"
        >
          <div
            class="uv_1u0cyic5"
            tabindex="0"
          >
            <button
              class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mk uv_1x0t66mu"
              data-testid="add-button"
              disabled=""
              type="button"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkzr"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  PlusIcon
                </title>
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
